fixed a bug with the colour picker not showing the correct colour on part change; fixed and styled the reset button

--- a/src/app/containers/Preferences/index.styl
+++ b/src/app/containers/Preferences/index.styl
@@ -191,6 +191,17 @@
   margin: 1rem 0;
 }
 
+.reset-colour {
+  width: 221px;
+  background: #df3b3b;
+  color: #FFFFFF;
+  outline: none;
+  border: none;
+  padding: .5rem;
+  border-radius: .25rem;
+  margin: 1rem 0;
+}
+
 .colour-picker {
   display: flex;
   justify-content: center;
